samples/_failures_safe/1761520961_ab8e91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_28812bc6.c: In function ‘main’:
./samples/SAFE/__tmp_28812bc6.c:159:5: error: expected declaration or statement at end of input
  159 |     }
      |     ^
